--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 40px 0 px;
   /* background-color: #5be4f7; */
-  background-image: url("https://img.freepik.com/free-vector/blue-pink-halftone-background_53876-99004.jpg?w=740&t=st=1707662453~exp=1707663053~hmac=f175511102c7a6b5540027ecc9609220255f841366652cbeb22cf39c28644334");
+  background-image: url("/img/Background.jpg");
 }
 
 .title {
