--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
   margin: 40px 0 px;
   /* background-color: #5be4f7; */
   background-image: url("/img/Background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title {
