--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
   margin: 40px 0 px;
-  /* background-color: #5be4f7; */
-  background-image: url("/img/Background.jpg");
+  background-color: #b8e6ec;
 }
 
 .title {
